make sure nav covers logo

--- a/web/static/app/layout/_embed.sass
+++ b/web/static/app/layout/_embed.sass
@@ -64,7 +64,7 @@ body.embed
         right: 0
         bottom: 0
         left: 0
-        z-index: 3
+        z-index: 10
 
         &_list
             display: flex
